<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>depth_to_pcl</name>
	<version>0.0.0</version>
	<description>ROS2 package to convert depth image to pointcloud in ROS2 Jazzy and Gazebo Harmonic using ros_gz_bridge</description>
	<maintainer email="yashikasharma0301@gmail.com">yashika-arz-i007</maintainer>
	<license>Apache-2.0</license>
	<buildtool_depend>ament_cmake</buildtool_depend>
	<depend>rclcpp</depend>
	<depend>std_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>geometry_msgs</depend>
	<exec_depend>xacro</exec_depend>
	<exec_depend>robot_state_publisher</exec_depend>
	<exec_depend>ros_gz</exec_depend>
	<exec_depend>ros_gz_bridge</exec_depend>
	<exec_depend>ros_gz_sim</exec_depend>
	<depend>ros_gz_image</depend>
	<depend>tf2</depend>
	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>
	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
